# jhcontext-usecases

./: README.md  pyproject.toml
output/: chronic_monitoring_audit.json  chronic_monitoring_envelope.json  chronic_monitoring_metrics.json  chronic_monitoring_prov.ttl  chw_mental_health_audit.json  chw_mental_health_envelope.json  chw_mental_health_metrics.json  chw_mental_health_prov.ttl  education_audit.json  education_envelope.json  education_equity_prov.ttl  education_metrics.json  education_prov.ttl  education_scenario_b_envelope.json  education_scenario_b_forward.json  education_scenario_b_prov.ttl  finance_audit.json  finance_credit_prov.ttl  finance_envelope.json  finance_fair_lending_prov.ttl  finance_metrics.json  healthcare_audit.json  healthcare_envelope.json  healthcare_metrics.json  healthcare_prov.ttl  healthcare_triage_envelope.json  hiring_cohort_audit.json  hiring_cohort_census.json  hiring_cohort_corpus.jsonl  hiring_cohort_four_fifths.json  hiring_cohort_incidents.json  hiring_cohort_metrics.json  hiring_inflight_audit.json  hiring_inflight_envelope.json  hiring_inflight_metrics.json  hiring_inflight_prov.ttl  hiring_procurement_audit.json  hiring_procurement_envelope_parsing.json  hiring_procurement_envelope_screening.json  hiring_procurement_envelope_sourcing.json  (+18 more)
output/benchmarks/: results.csv  results.json  summary.txt
tests/: test_hiring_cohort.py  test_hiring_verifiers.py
usecases/: _sparql.py
usecases/benchmarks/: bench_api.py  bench_compliance.py  bench_crypto.py  bench_inmemory.py  bench_mcp.py  bench_prov_scaling.py  bench_storage.py  (+4 more)
(+31 files in other folders)
